# pym

./: .clang-format  .gitignore  CMakeLists.txt
include/pym/error/: result.hpp
include/pym/math/: lazy.hpp  mat.hpp
include/pym/shared/: iter.hpp  types.hpp
include/pym/trait/: clonable.hpp
include/pym/util/: arr2d.hpp
src/math/: mat.cpp
